tests/snapshots/schema_cli__schema_lists_show.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {
      "list": {
        "description": "The list's exact name or its ID",
        "type": "string",
        "x-cli": "<LIST>"
      }
    },
    "required": [
      "list"
    ],
    "type": "object"
  },
  "output": {
    "description": "A task list: every field Microsoft Graph returns, with `id` replaced",
    "properties": {
      "completed_count": {
        "type": "integer"
      },
      "displayName": {
        "type": "string"
      },
      "extensions": {
        "description": "ms-todo's own open extension (com.planetaryescape.mstodo), when it has one and it has been fetched. A task's may hold myDay, myDayDueSet, assignee, assigneeStatusSet and nag (minutes between nag reminders)",
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "folder": {
        "description": "The folder the list is in (ms-todo's own; the To Do apps don't show it), or null",
        "type": [
          "string",
          "null"
        ]
      },
      "graph_id": {
        "description": "Microsoft Graph's ID, for `raw` and debugging; commands take it too",
        "type": [
          "string",
          "null"
        ]
      },
      "id": {
        "description": "ms-todo's local ID; stable, and what commands take",
        "type": "string"
      },
      "isOwner": {
        "type": "boolean"
      },
      "isShared": {
        "type": "boolean"
      },
      "open_count": {
        "type": "integer"
      },
      "schema_version": {
        "const": 2
      },
      "sync_state": {
        "description": "From its outbox writes: synced; pending (queued or being sent); unknown (a write may or may not have reached Microsoft To Do; never retry it, see `outbox list`); failed (a write was rejected and rolled back; see `outbox list`)",
        "enum": [
          "synced",
          "pending",
          "unknown",
          "failed"
        ]
      },
      "wellknownListName": {
        "description": "defaultList for \"Tasks\"",
        "type": "string"
      }
    },
    "required": [
      "id",
      "graph_id",
      "sync_state",
      "displayName"
    ],
    "type": "object"
  }
}
