tests/snapshots/schema_cli__schema_myday_list.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {},
    "required": [],
    "type": "object"
  },
  "output": {
    "properties": {
      "items": {
        "items": {
          "description": "A task: every field Microsoft Graph returns, with `id` replaced",
          "properties": {
            "attachments": {
              "description": "Its attachments' metadata, as `attachments list` gives it without `index`; absent until a sync has fetched it",
              "items": {
                "type": "object"
              },
              "type": "array"
            },
            "body": {
              "type": "object"
            },
            "categories": {
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            "createdDateTime": {
              "type": "string"
            },
            "defer_until": {
              "description": "YYYY-MM-DD, a local day: the task is hidden from everyday views until then (ms-todo's own; the To Do apps don't hide it). On its day it shows again",
              "type": [
                "string",
                "null"
              ]
            },
            "dueDateTime": {
              "description": "Graph's dateTimeTimeZone; a date only",
              "type": "object"
            },
            "extensions": {
              "description": "ms-todo's own open extension (com.planetaryescape.mstodo), when it has one and it has been fetched",
              "items": {
                "type": "object"
              },
              "type": "array"
            },
            "graph_id": {
              "description": "Microsoft Graph's ID, for `raw` and debugging; commands take it too",
              "type": [
                "string",
                "null"
              ]
            },
            "id": {
              "description": "ms-todo's local ID; stable, and what commands take",
              "type": "string"
            },
            "importance": {
              "enum": [
                "low",
                "normal",
                "high"
              ]
            },
            "isReminderOn": {
              "type": "boolean"
            },
            "lastModifiedDateTime": {
              "type": "string"
            },
            "list_id": {
              "description": "The local ID of the task's list",
              "type": "string"
            },
            "recurrence": {
              "type": "object"
            },
            "reminderDateTime": {
              "type": "object"
            },
            "someday": {
              "description": "Parked as Someday: hidden from everyday views until taken out (ms-todo's own)",
              "type": "boolean"
            },
            "status": {
              "description": "notStarted, waitingOnOthers or completed, among Graph's values",
              "type": "string"
            },
            "sync_state": {
              "description": "From its outbox writes: synced; pending (queued or being sent); unknown (a write may or may not have reached Microsoft To Do; never retry it, see `outbox list`); failed (a write was rejected and rolled back; see `outbox list`)",
              "enum": [
                "synced",
                "pending",
                "unknown",
                "failed"
              ]
            },
            "title": {
              "type": "string"
            }
          },
          "required": [
            "id",
            "graph_id",
            "sync_state",
            "list_id",
            "title",
            "defer_until",
            "someday"
          ],
          "type": "object"
        },
        "type": "array"
      },
      "schema_version": {
        "const": 2
      },
      "sync": {
        "properties": {
          "generation": {
            "description": "Goes up by one per finished sync of the scope",
            "type": "integer"
          },
          "state": {
            "description": "initial until this scope's first sync finishes: an empty `items` then doesn't mean empty",
            "enum": [
              "initial",
              "ready"
            ]
          }
        },
        "required": [
          "state",
          "generation"
        ],
        "type": "object"
      }
    },
    "required": [
      "schema_version",
      "sync",
      "items"
    ],
    "type": "object"
  }
}
